reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__projections.rs_line_394_col_5.log

*** crates/tracewake-core/src/projections.rs:394:5: replace no_human_day_metrics -> NoHumanDayMetrics with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/projections.rs
+++ replace no_human_day_metrics -> NoHumanDayMetrics with Default::default()
@@ -386,81 +386,17 @@
             self.tui_action_coverage,
             self.player_conditioned_event_count,
             self.player_conditioned_event_rate_per_1000
         )
     }
 }
 
 pub fn no_human_day_metrics(log: &EventLog) -> NoHumanDayMetrics {
-    let events = log.events();
-    let player_conditioned_event_count = events
-        .iter()
-        .filter(|event| contains_player_conditioned_fact(event))
-        .count();
-    let player_conditioned_event_rate_per_1000 = if events.is_empty() {
-        0
-    } else {
-        (player_conditioned_event_count as u64 * 1000) / events.len() as u64
-    };
-    let start_tick = events
-        .iter()
-        .find(|event| event.event_type == EventKind::NoHumanDayStarted)
-        .map(|event| event.sim_tick)
-        .unwrap_or(SimTick::ZERO);
-    let end_tick = events
-        .iter()
-        .rev()
-        .find(|event| event.event_type == EventKind::NoHumanDayCompleted)
-        .map(|event| event.sim_tick)
-        .unwrap_or(start_tick);
-    let mut stuck_actor_ids = events
-        .iter()
-        .filter(|event| event.event_type == EventKind::StuckDiagnosticRecorded)
-        .filter_map(|event| event.actor_id.clone())
-        .collect::<Vec<_>>();
-    stuck_actor_ids.sort();
-    stuck_actor_ids.dedup();
-
-    NoHumanDayMetrics {
-        projection_version: "no_human_day_metrics_v1".to_string(),
-        events_per_day: events.len(),
-        routine_event_count: events
-            .iter()
-            .filter(|event| is_routine_event(event.event_type))
-            .count(),
-        meals_completed: count_kind(events, EventKind::FoodConsumed),
-        meals_missed: count_kind(events, EventKind::EatFailed),
-        sleep_completed: count_kind(events, EventKind::SleepCompleted),
-        sleep_interrupted: count_kind(events, EventKind::SleepInterrupted),
-        work_blocks_completed: count_kind(events, EventKind::WorkBlockCompleted),
-        work_blocks_failed: count_kind(events, EventKind::WorkBlockFailed),
-        need_threshold_crossings: count_kind(events, EventKind::NeedThresholdCrossed),
-        routine_interruptions: count_kind(events, EventKind::IntentionInterrupted)
-            + count_kind(events, EventKind::RoutineStepFailed),
-        planner_failures: events
-            .iter()
-            .filter(|event| is_typed_planner_failure_event(event))
-            .count(),
-        stuck_actor_count: stuck_actor_ids.len(),
-        run_duration_ticks: end_tick.value().saturating_sub(start_tick.value()),
-        replay_failure_count: events
-            .iter()
-            .filter(|event| {
-                event.event_type == EventKind::ReplayProjectionRebuilt
-                    && event
-                        .payload
-                        .iter()
-                        .any(|field| field.value.contains("failure"))
-            })
-            .count(),
-        tui_action_coverage: unique_action_count(events),
-        player_conditioned_event_count,
-        player_conditioned_event_rate_per_1000,
-    }
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 fn count_kind(events: &[EventEnvelope], kind: EventKind) -> usize {
     events
         .iter()
         .filter(|event| event.event_type == kind)
         .count()
 }


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/projections.rs` has changed (1781904552.771923725s, 3s after last build at 1781904549.551923668s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `NoHumanDayMetrics: Default` is not satisfied
   --> crates/tracewake-core/src/projections.rs:394:5
    |
394 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `NoHumanDayMetrics`
    |
help: consider annotating `NoHumanDayMetrics` with `#[derive(Default)]`
    |
347 + #[derive(Default)]
348 | pub struct NoHumanDayMetrics {
    |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
